fixed sparker logo alignment on nav bar

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -13,7 +13,7 @@
 }
 
 .nav-logo {
-	margin-top:0.95rem;
+	margin-top:1.1rem;
 	content:url('/resources/images/sparker_black.png');
 }
 
